@@ -27,6 +27,7 @@ version 0.9.0 - Not released, available at https://simupop.svn.sourceforge.net/s
   - CHG: Recombinator now supports different types of chromosomes.
   - NEW: Add ops parameter to mating schemes.
   - NEW: add mitochondrialGenoTransmitter.
+  - NEW: add population::updateInfoFieldsFrom.
 
 version 0.8.9 - tagged, but not publically released (rev 1948).
   - DOC: Adjust reference output for simuPOP classes.
